tests/baselines/reference/functionAndPropertyNameConflict.errors.txt
==== tests/cases/compiler/functionAndPropertyNameConflict.ts (2 errors) ====
    class C65 {
        public aaaaa() { }
        public get aaaaa() {
                   ~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                   ~~~~~
!!! error TS2300: Duplicate identifier 'aaaaa'.
            return 1;
        }
    }